Creación de chat y fix del home

--- a/templates/anuncios.html
+++ b/templates/anuncios.html
@@ -90,7 +90,7 @@
                     <h5 class="amarillo">{{a['status_online']}}</h5>
                     <hr class="amarillo">
                     <h4>
-                        <h4 class="">{{a['type']}}</h4> {{a['currency']}} con {{a['fiat']}}
+                        <h4 style="color:{{a['color']}};">{{a['type']}}</h4> {{a['currency']}} con {{a['fiat']}}
                     </h4>
                     <h4>ARS$ {{a['high_price']}}</h4>
                     <h4 class="amarillo">Cantidad total: {{a['amount']}} {{a['currency']}}</h4>
