--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
         }
 
         .negro {
-            background-color: #292929;
+            background-color: #1f1e1e;
         }
 
         .magenta {
@@ -30,8 +30,8 @@
             color: #ffc107;
         }
 
-        .cuadrados {
-            outline: 1px solid #d0d0d0;
+        .cuadradosA {
+            outline: 1px solid #ffc107;
         }
     </style>
     <title>Mafiance | Compra/Vende USDT</title>
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="container blanco">
-            <div class="row cuadrados" style="border-radius: 20px;">
+            <div class="row cuadradosA" style="border-radius: 20px;">
                 <div class="col text-center py-3">
                     <h1 class="magenta">Bienvenido a MAFIANCE </h1>
                     <i class="fa-brands fa-redhat fa-5x"></i>
