--- a/templates/p2pSeller.html
+++ b/templates/p2pSeller.html
@@ -226,6 +226,12 @@
                     <div class="pt-5">
                         <a href="/sell_selected_ad/{{a['_id']}}" type="button" class="btn btn-danger btn-lg">Vender</a>
                     </div>
+                    {% if userId == a['user_id'] %}
+                    <div class="col-2">
+                        <a href="/advertisements/{{a['_id']}}/orders" type="button" class="btn btn-danger btn-lg">Ver
+                            órdenes</a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
             <hr class="magenta">
