--- a/templates/sell_selected_ad.html
+++ b/templates/sell_selected_ad.html
@@ -129,8 +129,10 @@
                     <div class="col py-3">
                         <h6 class="magenta">Información del Trade</h6>
                         <p>Plazo del pago: {{ad['time']}}</p>
-                        <p>Apodo del comprador: {{user['user']}}</p>
-                        <p>Método de Pago del vendedor: {{method['name']}}</p>
+                        <p>Apodo del anunciante: {{user['user']}}</p>
+                        <p>Métodos de Pago del anuncio:
+                        <p class="amarillo">{{method['name']}}</p>
+                        </p>
                     </div>
                     <hr class="magenta">
                     <div class="col">
