Condiciones de balance del anunciante, inicio temporizador, chat fix

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -90,7 +90,7 @@
                     <i class="fa-solid fa-comments fa-2x"></i>
                 </div>
                 <div class="col-3 py-3 mb-3 amarillo">
-                    <p>{{o['status']}} ></p>
+                    <p style="color:{{o['color']}};">{{o['status']}} ></p>
                     <p>{{o['created_at']}}</p>
                     <h3>{{o['valor_al_cambio']}}</h3>
                     <hr>
