--- a/templates/client_chat.html
+++ b/templates/client_chat.html
@@ -9,6 +9,9 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
     <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="temporizador_style.css">
+
     <style type="text/css">
         .blanco {
             color: white;
@@ -58,6 +61,17 @@
 
 <body>
     <section class="negro blanco pb-5">
+        {% if mensaje %}
+        <div class="container py-2">
+            <div class="row">
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        {{mensaje}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <form class="container" action="/message/create">
             <div class="row py-3">
                 <div class="col-4">
@@ -91,13 +105,15 @@
 
                 <div class="col-4 text-center pt-2">
 
-                    {{order['advertiser_id']}} Anunciante
-                    {{userId}}
+                    <p class="amarillo"> ID Anunciante ({{order['advertiser_id']}})</p>
+                    <p>Usuario actual ({{userId}})</p>
+
                     {% if userId == order['advertiser_id'] %}
-                    {% if order['status'] == 'Liberando' %}
+                    {% if order['status'] == 'Liberando' or order['status'] == 'Cancelada' %}
                     <a href="/order/next/status/{{order['_id']}}" class="btn btn-warning btn-lg">Liberar criptos</a>
                     {% endif %}
                     {% endif %}
+
 
                     {% if userId != order['advertiser_id'] %}
                     {% if order['status'] == 'Pendiente' %}
@@ -105,16 +121,46 @@
                     {% endif %}
                     {% endif %}
 
+                    {% if userId != order['advertiser_id'] %}
+                    {% if order['status'] == 'Liberando' %}
+                    <a href="/order/apelation/{{order['_id']}}" class="btn btn-warning btn-lg">Apelar</a>
+                    {% endif %}
+                    {% endif %}
+
                     {% if order['status'] == 'Completado' %}
                     <a href="/order/next/status/{{order['_id']}}" class="btn btn-success btn-lg">Ver resumen</a>
                     {% endif %}
                 </div>
-                <div class="col-4"></div>
+                <!--------------------Temporizador------------------------>
+                <div class="col-4">
+
+                    <div class="cont-temporizador">
+                        <div class="bloque">
+                            <div class="dias" id="dias">00</div>
+                            <p>DÍAS</p>
+                        </div>
+                        <div class="bloque">
+                            <div class="horas" id="horas">--</div>
+                            <p>HORAS</p>
+                        </div>
+                        <div class="bloque">
+                            <div class="minutos" id="minutos">--</div>
+                            <p>MINUTOS</p>
+                        </div>
+                        <div class="bloque">
+                            <div class="segundos" id="segundos">--</div>
+                            <p>SEGUNDOS</p>
+                        </div>
+                    </div>
+
+                </div>
+                <!-------------------------------------------------------->
             </div>
             <hr class="magenta">
             <div class="row">
                 <div class="col cuadradosM py-3">
                     <input type="hidden" name="order_id" value="{{order['_id']}}" />
+                    <input type="hidden" name="ad_id" value="{{order['advertisement_id']}}" />
                     <!--COMO HACER UN CHAT PAPA!!! UN LINK MEGA-->
                     {% if not message %}
                     <div class="row py-5">
@@ -134,22 +180,51 @@
                                 <p class="m-0 pb-1">
                                     <small class="fw-bold">{{m['user']['user']}}</small>
                                 </p>
+
+                                <!--Explicación de condiciones: si existe el mensaje en mensajes publica el mensaje
+                            sino verifica si el usuario de la sesion es igual al id del usuario creador del anuncio
+                        luego verifica si no existe un mensaje en mensajes imprime el mensaje reservado del anunciante-->
+
+                                {% if (m['message'] | string) %}
+
                                 <p class="m-0">- {{m['message']}}</p>
+
+                                {% else %}
+
+
+                                {% if not (m['message'] | string) %}
+
+                                <p class="m-0">- {{m['reserved_message']}}</p>
+
+
+                                {% endif %}
+                                {% endif %}
+
                             </div>
                             <!--Si existe la imagen muestra el cuadro de css si no existe ocultalo-->
-                            {% if img_client %}
+
                             <img class="img_client" id="img-preview">
-                            {% endif %}
+
                         </div>
                         {% else %}
                         <div class="col-5"></div>
                         <div class="col-7">
                             <div class="bg-magenta rounded p-1 mb-3">
+
+                                {% if (m['message'] | string) %}
                                 <p class="m-0">- {{m['message']}}</p>
+                                {% else %}
+
+                                {% if userId == order['advertiser_id'] %}
+                                {% if not (m['message'] | string) %}
+                                <p class="m-0">- {{m['reserved_message']}}</p>
+                                {% endif %}
+                                {% endif %}
+                                {% endif %}
                             </div>
-                            {% if img_client %}
+
                             <img class="img_client" id="img-preview">
-                            {% endif %}
+
                         </div>
                         {% endif %}
                     </div>
@@ -171,9 +246,11 @@
                 <div class="col-4 pt-1">
                     <input class="form-control me-2" type="search" name="message" placeholder="Escribe tu mensaje">
                 </div>
-                <div class="col-1 mx-2">
+                {% if userId == order['advertiser_id'] %}
+                <div class="col-1">
                     <button type="submit" class="btn fa-solid fa-message fa-2x blanco"></button>
                 </div>
+                {% endif %}
                 <div class="col-1">
                     <button type="submit" class="btn fa-solid fa-paper-plane fa-2x blanco"></button>
                 </div>
@@ -183,13 +260,17 @@
     </section>
 
     <!--Cargamos widget de cloudinary-->
-    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+    <!--<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>-->
 
     <!--Cargamos Axios-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>-->
 
     <!--Cargamos el archivo javascript para asociar al html-->
-    <script src="app_image.js"></script>
+    <!--<script src="app_image.js"></script>-->
+
+    <!--Javascript del temporizador-->
+    <!--<script src="app_temporizador.js"></script>-->
+
 </body>
 
 </html>
