--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -49,6 +49,17 @@
 
 <body>
     <section class="negro pb-5">
+        {% if mensaje %}
+        <div class="container py-2">
+            <div class="row">
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        {{mensaje}}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <div class="container fmagenta" style="border-radius: 20px;">
             <div class="row py-3">
                 <div class="col-4">
