--- a/templates/publish_seller.html
+++ b/templates/publish_seller.html
@@ -226,7 +226,7 @@
             <div class="row mb-4">
 
                 <div class="col-4 py-3 cuadradosA" style="border-radius: 20px;">
-                    <h6 class="amarillo">Condiciones de la contraparte</h6>
+                    <h6 class="amarillo">Condiciones de la contraparte (opcional)</h6>
                     <p class="magenta">Añadir requisitos para la contraparte, hara que tu anuncio sea bien pajuo.</p>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="costumer_registred_days"
