--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -239,8 +239,12 @@
                 <div class="col-2 magenta">
                     <p>120 Órdenes | 81.10%</p>
                     <div class="pt-5"></div>
+                    <!--Decidimos mostrar el botón al usuario deseado. Si al anunciante o al cliente-->
+                    {% if userId != a['user_id'] %}
                     <a href="/buy_selected_ad/{{a['_id']}}" type="button" class="btn fmagenta blanco btn-lg">Comprar</a>
+                    {% endif %}
                 </div>
+
                 {% if userId == a['user_id'] %}
                 <div class="col-2">
                     <a href="/advertisements/{{a['_id']}}/orders" type="button" class="btn btn-danger btn-lg">Ver
