--- a/templates/p2pSeller.html
+++ b/templates/p2pSeller.html
@@ -235,7 +235,9 @@
                 <div class="col-2 magenta">
                     <p>120 Órdenes | 81.10%</p>
                     <div class="pt-5"></div>
+                    {% if userId != a['user_id'] %}
                     <a href="/sell_selected_ad/{{a['_id']}}" type="button" class="btn btn-danger btn-lg">Vender</a>
+                    {% endif %}
                 </div>
                 {% if userId == a['user_id'] %}
                 <div class="col-2">
