--- a/templates/client_chat.html
+++ b/templates/client_chat.html
@@ -109,7 +109,7 @@
                     <p>Usuario actual ({{userId}})</p>
 
                     {% if userId == order['advertiser_id'] %}
-                    {% if order['status'] == 'Liberando' or order['status'] == 'Cancelada' %}
+                    {% if order['status'] == 'Liberando' or order['status'] == 'Apelando' %}
                     <a href="/order/next/status/{{order['_id']}}" class="btn btn-warning btn-lg">Liberar criptos</a>
                     {% endif %}
                     {% endif %}
